# nb_hugo_exporter

./: .gitignore  README.md  pyproject.toml
resources/css/: custom.css
resources/shortcodes/: jp_codecell_input.html  jp_codecell_output.html
src/nbhugoexporter/: hugoexporter.py  hugopreprocessor.py
src/nbhugoexporter/templates/: hugo.j2
tests/: context.py  test_export.py
tests/resources/: test.ipynb  test.md
