[project]
name = "nbhugoexporter"
version = "0.3.0"
description = "Export Jupyter notebooks to a Hugo compatible format"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "nbconvert>=7.16.4",
    "toml>=0.10.2",
]

[project.entry-points."nbconvert.exporters"]
hugo = "nbhugoexporter.hugoexporter:HugoExporter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
